# mlx-vla

./: .gitignore  LICENSE  README.md  cli_examples.sh  examples.py  pyproject.toml
examples/: benchmark.py  demo.py  quickstart.py  train_diffusion.yaml  train_lora.yaml
formula/: mlx-vla.rb
mlx_vla/: __init__.py  train_vla.py
mlx_vla/cli/: __init__.py  main.py
mlx_vla/core/: __init__.py
mlx_vla/data/: __init__.py  collator.py  dataloader.py  dataset.py  download.py  normalizer.py  tokenizer.py
mlx_vla/inference/: __init__.py  pipeline.py
mlx_vla/models/: __init__.py  _constants.py  action_heads.py  fusion.py  language.py  modeling_vla.py  pretrained.py  vision.py
mlx_vla/training/: __init__.py  callbacks.py  lora.py  optimizers.py  trainer.py
mlx_vla/utils/: __init__.py  config.py  pretrained.py
tests/: test_additional.py  test_comprehensive.py  test_core.py  test_strict.py
